<resources>
    <string name="app_name">MTTN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_websis">WebSIS Portal</string>
    <string name="nav_sis">SIS Portal</string>
    <string name="nav_directory">Telephone Directory</string>
    <string name="nav_blog">Blog</string>
    <string name="nav_announcements">Announcements</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_contact_us">Contact Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>WebSIS Portal</item>
        <item>SIS Portal</item>
        <item>Telephone Directory</item>
        <item>Blog</item>
        <item>Announcements</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_contact_us">Contact Us</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="manipalthetalk_org">manipalthetalk.org</string>
    <string name="mttn">MTTN | We Are Manipal</string>

    <string name="Percent">%</string>
    <string name="Updated">Updated</string>
    <string name="Code">Code</string>
    <string name="Name">Name</string>
    <string name="Classes">Total</string>
    <string name="Attended">Pr</string>
    <string name="Absent">Ab</string>

    <string name="submit">Log in</string>
    <string name="rem">Remember me</string>
    <string name="img">IMAGEClear</string>
    <string name="rHint">Reg. No.</string>
    <string name="bHint">Birth date (YYYY-MM-DD)</string>
    <string name="dd_mm_yyyy">Birth date (DD/MM/YYYY)</string>
</resources>
