<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_websis"
            android:icon="@drawable/ic_websis"
            android:title="@string/nav_websis" />
        <item
            android:id="@+id/nav_sis"
            android:icon="@drawable/ic_sis"
            android:title="@string/nav_sis" />
        <item
            android:id="@+id/nav_directory"
            android:icon="@drawable/ic_directory"
            android:title="@string/nav_directory" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/nav_blog" />

        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_announcements"
            android:title="@string/nav_announcements" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_contact_us"
                android:title="@string/nav_contact_us" />
        </menu>
    </item>

</menu>